--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "The Code Ninja",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "lodash": "^4.17.21"
   }
